--- a/index.html
+++ b/index.html
@@ -4,19 +4,19 @@
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <!-- we import arjs version without NFT but with marker + location based support -->
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple--mobile-web-app-capable" content="yes" />
   </head>
   <body style="margin : 0px; overflow: hidden;">
     <a-scene embedded arjs>
       <a-marker preset="hiro">
         <a-entity
           position="0 0 0"
-          scale="0.05 0.05 0.05"
-          gltf-model="amor.gltf"
+          scale="0.5 0.5 0.5"
+          rotation="0 45 45"
+          gltf-model="https://arjs-cors-proxy.herokuapp.com/https://raw.githubusercontent.com/engtiago/ar.js-teste/master/scene2/scene.gltf"
         ></a-entity>
       </a-marker>
       <a-entity camera></a-entity>
-    </a-scene>
+    </a-scene
   </body>
 </html>
-'
